--- a/public/css/main.css
+++ b/public/css/main.css
@@ -488,3 +488,60 @@ a:hover { color: #ff841c; text-decoration: none; }
 		padding-bottom: 0;
 	}
 }
+
+.exit-popup-container {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1500;
+
+	background: rgba(0, 0, 0, 0.8);
+
+	width: 100%;
+	height: 100%;
+}
+
+.exit-popup {
+	position: absolute;
+	top: 10%;
+	left: 20%;
+
+	width: 60%;
+	height: auto;
+
+	border: 2px solid #ff841c;
+	border-radius: 10px;
+	background: #262626;
+
+	padding: 25px;
+
+	z-index: 2000;
+}
+
+.exit-popup-close {
+	color: #FFFFFF;
+	font-size: 60px;
+	position: absolute;
+	right: 0;
+	top: 0;
+	cursor: pointer;
+}
+
+.exit-popup-title {
+	color: #FFFFFF;
+	font-family: 'Oswald', sans-serif;
+}
+
+.exit-popup-txt {
+	color: #FFFFFF;
+}
+
+.exit-popup label { color: #FFFFFF; }
+
+@media screen and (max-width: 800px) {
+	.exit-popup {
+		width: 100%;
+		top: 10%;
+		left: 0;
+	}
+}
