--- a/templates/pages/groupe_jazz_manouche_mariage_paris.html.twig
+++ b/templates/pages/groupe_jazz_manouche_mariage_paris.html.twig
@@ -15,11 +15,15 @@
 		</div>
 	</section>
 
-	<section class="flash-ghost flash-ghost--limited"></section>
+	<section class="flash-ghost flash-ghost--limited" style="height: 20vh;"></section>
 
 	<section class="content-section bg--blank page-section">
 		<div class="container bg--blank">
 			<h1 class="section-title">Groupe jazz manouche pour votre mariage</h1>
+
+			<div class="embed-responsive embed-responsive-16by9" style="margin-bottom: 15px;">
+				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NIvIUJcluU0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
 
             <p>
                 Vous préparez votre mariage (ou l'organisez pour des clients), et vous cherchez un <strong><a href="{{ path('manouche') }}">groupe de jazz manouche</a></strong> pour animer celui-ci en musique ? Du vin d'honneur au repas, découvrez nos formules qui raviront à coup sûr vos invités !
@@ -44,7 +48,7 @@
             <h2 class="section-title section-title--small">Duo jazz manouche pour votre mariage</h2>
 
             <p>
-				En duo avec l'excellent guitariste Solal Poux, nous vous proposons une formule facile à mettre en place, convenant aux lieux les plus intimistes (et budgets modestes). En acoustique ou légèrement sonorisé, nous assurons le déroulement musical de votre soirée dans une ambiance chic et élégante ; alternant les morceaux virtuoses et les balades langoureuses, le répertoire est varié et plaira à tous !
+				En duo avec l'excellent guitariste Solal Poux, nous vous proposons une formule facile à mettre en place, convenant aux lieux les plus intimistes (et budgets modestes). En acoustique ou légèrement sonorisé, nous assurons l'animation musicale de votre soirée dans une ambiance chic et élégante ; alternant les morceaux virtuoses et les balades langoureuses, le répertoire est varié et plaira à tous !
 			</p>
 
             <p>
