--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -12,10 +12,11 @@
 	<section class="flash flash--limited">
 		<div class="flash-item">
 			<img src="img/trio-jazz-manouche.jpg" alt="Trio jazz manouche pour événements - Accordéon, Guitare, Contrebasse" class="flash-item__background" style="top: -50%;">
+
 		</div>
 	</section>
 
-	<section class="flash-ghost flash-ghost--limited"></section>
+	<section class="flash-ghost flash-ghost--limited" style="height: 20vh;"></section>
 
 	<section class="content-section bg--blank page-section">
 		<div class="container bg--blank">
@@ -23,6 +24,10 @@
 				Groupe jazz manouche pour vos événements <br>
 				<small>Orchestre sur mesure, musique de qualité</small>
 			</h1>
+
+			<div class="embed-responsive embed-responsive-16by9" style="margin-bottom: 15px;">
+				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NIvIUJcluU0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
 
             <p>
                 Vous recherchez un <strong>groupe de jazz manouche</strong> pour <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">votre mariage</a>, anniversaire, cocktail d'entreprise ou tout autre événement ? Vous avez fait le tour des sites qui proposent une <strong>recherche de musiciens</strong> et ne savez pas qui choisir ? Vous êtes au bon endroit ! <strong>Musiciens professionnels</strong> et expérimentés, nous vous proposons différentes formules, toutes sur mesure, pour une animation musicale de qualité lors de votre événement.
