--- a/templates/pages/groupe_jazz_manouche_mariage_paris.html.twig
+++ b/templates/pages/groupe_jazz_manouche_mariage_paris.html.twig
@@ -15,7 +15,7 @@
 		</div>
 	</section>
 
-	<section class="flash-ghost flash-ghost--limited" style="height: 20vh;"></section>
+	<section class="flash-ghost flash-ghost--limited flash-ghost--superlimited"></section>
 
 	<section class="content-section bg--blank page-section">
 		<div class="container bg--blank">
