--- a/public/css/main.css
+++ b/public/css/main.css
@@ -545,6 +545,8 @@ a:hover { color: #ff841c; text-decoration: none; }
 		top: 10%;
 		left: 0;
 	}
-}
 
-/* Chatbot */
+	#sntchWebChat {
+		display: none;
+	}
+}
