--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -281,6 +281,16 @@
             });
         </script>
 
-        <link href="https://fr.snatchbot.me/sdk/webchat.css" rel="stylesheet" type="text/css"><script src="https://fr.snatchbot.me/sdk/webchat.min.js"></script><script> Init('?botID=53894&appID=webchat', 400, 400, 'https://dvgpba5hywmpo.cloudfront.net/media/image/eaT8UAKBfRXxpJ8oNUO2OX4b2', 'bubble', '#00AFF0', 90, 90, 62.99999999999999, '', '1', '#FFFFFF', '#FFFFFF', 1); /* for authentication of its users, you can define your userID (add &userID={login}) */ </script>
+        <link href="https://fr.snatchbot.me/sdk/webchat.css" rel="stylesheet" type="text/css">
+        <script src="https://fr.snatchbot.me/sdk/webchat.min.js"></script>
+        <script>
+            function isMobileDevice() {
+                return (typeof window.orientation !== "undefined") || (navigator.userAgent.indexOf('IEMobile') !== -1);
+            };
+
+            if (!isMobileDevice()) {
+                Init('?botID=53894&appID=webchat', 400, 400, 'https://dvgpba5hywmpo.cloudfront.net/media/image/eaT8UAKBfRXxpJ8oNUO2OX4b2', 'bubble', '#00AFF0', 90, 90, 62.99999999999999, '', '1', '#FFFFFF', '#FFFFFF', 1); /* for authentication of its users, you can define your userID (add &userID={login}) */
+            }
+        </script>
     </body>
 </html>
