--- a/templates/anims/accordeoniste-mariages.html.twig
+++ b/templates/anims/accordeoniste-mariages.html.twig
@@ -34,7 +34,7 @@
 			</p>
 
 			<p>
-				Suivant vos envies et celles de vos convives, nous préparerons en amont l'orientation du spectacle pour votre mariage ; plutôt dansant, plutôt chanson, plutôt discret.. Qu'il s'agisse plutôt d'animer le vin d'honneur, le repas ou la soirée.. C'est vous (et vos invités !) qui décidez tout. <br>
+				Suivant vos envies et celles de vos convives, nous préparerons en amont l'orientation du spectacle pour votre mariage ; plutôt jazz, plutôt chanson, plutôt discret.. Qu'il s'agisse plutôt d'animer le vin d'honneur, le repas ou la soirée.. C'est vous (et vos invités !) qui décidez tout. <br>
 				Je propose des tarifs abordables, et des formules <strong>tout compris</strong> (sonorisation éventuelle, ...).
 			</p>
 
@@ -78,7 +78,11 @@
 			<h2 class="section-title section-title--small">Ambiance guinguette pour votre mariage</h2>
 
 			<p>
-				Vous cherchez plutôt une ambiance <i>rétro</i> pour l'animation musicale de votre mariage ? Très à la mode, le thème <strong>guinguette</strong> revient en force aujourd'hui dans tout type d'événement, et notamment les mariages. Plongez dans l'univers des années 30 à 50, avec une musique d'ambiance chic proposée par l'accordéon ; des grands standards de la chanson française (Brel, Aznavour, Piaf, Trenet, ...) aux valses <i>swing</i> de Jo Privat ou Gus Viseur, en passant par quelques classiques <i>musette</i>.. Dépaysement assuré !
+				Vous cherchez plutôt une ambiance <i>rétro</i> pour l'animation musicale de votre mariage ? Très à la mode, le thème <a href="{{ path('guinguette') }}">guinguette</a> revient en force aujourd'hui dans tout type d'événement, et notamment les mariages. Plongez dans l'univers des années 30 à 50, avec une musique d'ambiance chic proposée par l'accordéon ; des grands standards de la chanson française (Brel, Aznavour, Piaf, Trenet, ...) aux valses <i>swing</i> de Jo Privat ou Gus Viseur, en passant par quelques classiques <i>musette</i>.. Dépaysement assuré !
+			</p>
+
+			<p>
+				Ici encore, plusieurs types d'animation sont possibles. Celle-ci peut être discrète, une musique de fond servant juste à créer l'ambiance du Paris d'autrefois. Mais elle peut également être plus présente, et inviter vos convives à chanter sur les standards de la chanson française. Je peux également venir accompagné <strong>d'une chanteuse</strong>, avec qui nous reprenons les airs les plus connus du style.
 			</p>
 
 			<div class="row" style="margin-top: 15px; margin-bottom: 15px;">
@@ -131,7 +135,7 @@
 			<h3 class="section-title section-title--smaller" style="margin-top: 20px;">Chanson française pour votre mariage</h3>
 
 			<p>
-				Vous souhaitez un événement plus participatif, où vos invités peuvent chanter les airs qu'ils connaissent ? Je travaille avec plusieurs chanteuses, avec lesquelles nous vous proposons un répertoire balayant la chanson française (Piaf, Aznavour, Brel, Trenet, ...).
+				Vous souhaitez un événement plus participatif, où vos invités peuvent chanter les airs qu'ils connaissent ? Je travaille avec plusieurs chanteuses, avec lesquelles nous vous proposons un répertoire balayant la chanson française (Piaf, Aznavour, Brel, Trenet, ...). Nos formules commencent en duo <strong>accordéon / voix</strong>, "juste le nécessaire" ; mais nous pouvons également venir accompagnés d'autres instrumentistes (guitare, basse, batterie, violon, ...), pour quelque chose de plus festif. N'hésitez pas à nous contacter pour toute demande d'information.
 			</p>
 
 			<div class="row">
