--- a/templates/geo/77.html.twig
+++ b/templates/geo/77.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Accordéoniste profesionnel | Seine-et-Marne (77) | Jérémy DUTHEIL
+    Accordéoniste professionnel | Seine-et-Marne (77) | Jérémy DUTHEIL
 {% endblock %}
 
 {% block metadesc %}
