--- a/templates/pages/accordeoniste_soiree.html.twig
+++ b/templates/pages/accordeoniste_soiree.html.twig
@@ -20,7 +20,7 @@
 			<h1 class="section-title">Accordéoniste pour animer votre soirée</h1>
 
             <p>
-                Vous êtes à la recherche d'un <strong>accordéoniste pour animer votre soirée</strong> ? Mariage, fête entre amis sur le <a href="{{ path('guinguette') }}">thème "<i>Guinguette</i>"</a>, anniversaire, cocktail d'entreprise.. Les occasions sont nombreuses pour inviter un musicien, et l'accordéon s'adaptera facilement à tout type d'événement. Même si la tentation d'accueillir un <strong>groupe de musique</strong> est souvent grande, les conditions ne sont parfois pas réunies pour pouvoir le faire (taille du lieu, considérations techniques, budget...).
+                Vous êtes à la recherche d'un <strong>accordéoniste pour animer votre soirée</strong> ? <a href="{{ path('animations_mariages') }}">Mariage</a>, fête entre amis sur le <a href="{{ path('guinguette') }}">thème "<i>Guinguette</i>"</a>, anniversaire, cocktail d'entreprise.. Les occasions sont nombreuses pour inviter un musicien, et l'accordéon s'adaptera facilement à tout type d'événement. Même si la tentation d'accueillir un <strong>groupe de musique</strong> est souvent grande, les conditions ne sont parfois pas réunies pour pouvoir le faire (taille du lieu, considérations techniques, budget...).
             </p>
 
             <p>
@@ -28,7 +28,7 @@
             </p>
 
             <p>
-                Avec une formule en solo, l'organisation de votre événement est grandement simplifiée ; les conditions techniques sont réduites au minimum, et il n'y a pas besoin de sonorisation la plupart du temps. Si cela s'avère nécessaire, je suis autonome et possède mon propre matériel de diffusion. L'espace nécessaire se résume à une chaise, qui peut se déplacer au cours de la soirée afin d'animer différents espaces.. Je propose également dans certains cas de jouer en déambulation, à voir en fonction de votre projet.
+                Avec une formule en solo, l'organisation de votre événement est grandement simplifiée ; les conditions techniques sont réduites au minimum, et il n'y a pas besoin de sonorisation la plupart du temps. Si cela s'avère nécessaire, je suis autonome et possède mon propre matériel de diffusion. L'espace nécessaire se résume à une chaise, qui peut se déplacer au cours de la soirée afin d'animer différents espaces..
             </p>
 
             <p>
