--- a/templates/pages/guinguette.html.twig
+++ b/templates/pages/guinguette.html.twig
@@ -42,6 +42,10 @@
                     <p>
                         L'accordéoniste y est présent, de par la musique d'ambiance qu'il distille, mais également par un aspect visuel qui rappelle l'époque. Seul ou accompagné d'une chanteuse, je vous propose un répertoire autour des grandes chansons françaises des années 50-60 : Piaf, Brel, Montant, Aznavour, ... À ces chansons s'ajoutent des standards de jazz et jazz manouche, des morceaux qui swinguent et apportent une certaine originalité à ce moment.
                     </p>
+
+					<p>
+						Pour votre <strong>soirée guinguette</strong>, je vous propose des animations seul à l'accordéon, ou bien accompagné d'une chanteuse. En duo <strong>accordéon / voix</strong>, nous proposons un répertoire qui balaie la chanson française des années 30 à aujourd'hui.
+					</p>
 				</div>
 
 				<div class="col-md-4">
