--- a/templates/geo/fontainebleau.html.twig
+++ b/templates/geo/fontainebleau.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Accordéoniste profesionnel | Fontainebleau (77) | Jérémy DUTHEIL
+    Accordéoniste professionnel | Fontainebleau (77) | Jérémy DUTHEIL
 {% endblock %}
 
 {% block metadesc %}
