--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -110,10 +110,16 @@
 
 			<p>
 				Parmi nos <strong>groupes de jazz manouche</strong>, c'est la formule la plus courante et la plus "passe partout" ; la contrebasse vient ajouter une assise rythmique plus solide au duo, laissant plus grande liberté aux deux autres instrumentistes. Le trio reste facile et pratique à mettre en place pour votre événement, les conditions techniques étant limitées tout comme l'espace nécessaire.
+				<br>
+				On notera également l'apport visuel de la contrebasse (non négligeable), instrument emblématique du jazz manouche !
 			</p>
 
 			<p>
-				On notera égalent l'apport visuel de la contrebasse (non négligeable), instrument emblématique du jazz manouche !
+				Le répertoire balaie les grands standards du jazz manouche, de Django Reinhardt à Biréli Lagrène, et nous proposons en moyenne 3h de musique pour votre événement. L'improvisation, indispensable au style jazz manouche, rend la musique vivante ; les musiciens adaptent leur jeu en fonction du déroulement de votre soirée, tandis que les invités sont eux-mêmes influencés par l'ambiance musicale. C'est un cercle vertueux, qui induit une interaction (même implicite) très forte entre le public et le groupe de musique.
+			</p>
+
+			<p>
+				Musique d'ambiance en fond sonore ou concert sur scène devant un public aguerri, notre <strong>trio jazz manouche</strong> saura s'adapter à toutes vos envies. Nous adaptons également notre répertoire en fonction de vos demandes, orientant la <i>setlist</i> vers plus de morceaux dans le style chanson française ou jazz traditionnel, par exemple.
 			</p>
 
             <div class="row">
@@ -134,10 +140,20 @@
 				La guitare est l'instrument emblématique de la musique de Django Reinhardt, tout comme <strong>la pompe</strong>, rythmique essentielle du style jazz manouche. Avec deux guitaristes, les rôles sont répartis : l'un s'occupe de la rythmique, et l'autre des solos. Ainsi, la pompe est toujours présente et l'énergie décuplée !
 			</p>
 
+			<p>
+				Dans ce trio jazz manouche, on note bien sûr l'absence de contrebasse, qui est remplacée par la guitare rythmique ; les deux apportent des couleurs différentes, qui n'ont pas à s'envier l'une et l'autre. L'idéal étant bien sûr, si votre budget le permet, de s'orienter vers une formule en quartet où la guitare rythmique et la contrebasse sont présentes.
+			</p>
+
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NIvIUJcluU0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/pmZ80dJklu0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
@@ -150,6 +166,10 @@
 
 			<p>
 				Le premier instrument que nous conseillons est une <strong>seconde guitare</strong> qui assurera la rythmique ; <i>la pompe</i> est en effet un élément incontournable du jazz manouche. Grâce aux deux guitaristes, vous l'entendrez en permanence, même pendant les solos de guitare !
+				<br>
+				Pour assurer l'assise rythmique et harmonique, nous ajoutons également une <strong>contrebasse</strong> ; avec 2 guitares et une contrebasse, nous obtenons la formation classique du jazz manouche.
+				<br>
+				L'accordéon agit ici en tant qu'instrument mélodique principalement, et alterne les thèmes / chorus avec la guitare soliste.
 			</p>
 
 			<p>
