--- a/templates/pages/accordeon_jazz_manouche.html.twig
+++ b/templates/pages/accordeon_jazz_manouche.html.twig
@@ -11,7 +11,7 @@
 {% block body %}
     <section class="flash flash--limited">
         <div class="flash-item">
-            <img src="img/triomanouche.jpg" alt="" class="flash-item__background" style="top: -50%;">
+            <img src="img/trio-jazz-manouche.jpg" alt="Jérémy Dutheil et son trio jazz manouche" class="flash-item__background" style="top: -50%;">
         </div>
     </section>
 
@@ -24,6 +24,14 @@
             <p>
                 Musicien professionnel, Jérémy Dutheil est un accordéoniste de jazz manouche basé sur Paris ; seul ou en groupe, il propose différentes formules de concerts et animations musicales dans toute la France (voir <a href="{{ path('manouche') }}">cette page</a>). <br />
                 Son répertoire complet est axé autour des grands standards du style (<i>Minor Swing, All of Me, Indifférence, Les yeux noirs, Donna Lee, ...</i>) et de chansons françaises revisitées (<i>Les Feuilles Mortes, La Foule, Ménilmontant, ...</i>).
+            </p>
+
+            <p>
+                Début 2019, Jérémy décide de monter son propre projet autour du <strong>jazz manouche</strong> ; le socle de cette formation est établi par son duo avec le guitariste Solal Poux. Fait rare dans le style, ils se produisent régulièrement à deux sur scène : accordéon et guitare ! Une formule intimiste, qui laisse beaucoup de place à chaque musicien mais est aussi très exigeante. L'un et l'autre doivent assurer tour à tour la rythmique et/ou les solos, ce qui implique une grande maîtrise des instruments.
+            </p>
+
+            <p>
+                Pour les scènes et événements plus conséquents, ils sont rejoints par d'autres musiciens talentueux qui assurent la contrebasse et / ou la guitare rythmique.
             </p>
 
             <h2 class="section-title section-title--small">Quelques extraits</h2>
@@ -47,7 +55,21 @@
 				</div>
 			</div>
 
-            <h2 class="section-title section-title--small">La place de l'accordéon dans le jazz manouche</h2>
+            <div class="row">
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NIvIUJcluU0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/pmZ80dJklu0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+            <h2 class="section-title section-title--small" style="margin-top: 20px;">La place de l'accordéon dans le jazz manouche</h2>
 
             <p>
                 Le jazz manouche est un style de musique qui apparaît dans les années 30, à l'initiative notamment de <strong>Django Reinhardt</strong> et <strong>Stéphane Grappelli</strong> ; d'abord essentiellement joué avec des instruments à corde (la guitare étant l'instrument roi du style !), les formations musicales s'étoffent rapidement pour accueillir d'autres instruments, comme l'accordéon, le violon ou la clarinette. <br>
