--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -12,6 +12,9 @@
 	<section class="flash flash--limited">
 		<div class="flash-item">
 			<img src="img/accordeoniste-soirees-evenements.jpg" alt="Accordéoniste et musiciens pour événements (soirées, mariages, cocktails)" class="flash-item__background flash-item__background--groupes" style="top: -30%">
+
+			<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+			<div class="elfsight-app-ec309407-5635-4d34-a076-6f44bf20acc8 reviews reviews-flash"></div>
 		</div>
 	</section>
 
@@ -251,13 +254,34 @@
 				<a href="{{ path('collaborations') }}#marie" class="btn btn-primary">Plus d'informations</a>
 			</p>
 
+			<hr style="background-color: #2d2d2d; margin: 25px 0;">
+
 			<h2 class="section-title section-title--small" style="margin-top: 20px;">Votre événement sur mesure</h2>
 
 			<p>
 				Toutes ces formules vous sont proposées à titre d'exemple ; pour votre événement, vous choisissez tout ! Le style musical, l'orientation du répertoire, les instruments présents (l'accordéon restant une constante ;) ), ... N'hésitez pas à me contacter afin de discuter de votre soirée !
 			</p>
 
+
+
 			<hr style="background-color: #2d2d2d; margin: 25px 0;">
+
+			<h2 class="section-title section-title--small">Ils nous ont fait confiance</h2>
+
+			<div class="partners">
+				<img src="{{ asset('img/vinci.png') }}" alt="Vinci" style="max-height: 100px; margin-right: 25px;">
+				<img src="{{ asset('img/audiens.png') }}" alt="Audiens" style="max-height: 60px; margin-right: 25px;">
+				<img src="{{ asset('img/lebarn.svg') }}" alt="Hôtel Le Barn" style="max-width: 100px; max-height: 60px; margin-right: 25px;">
+				<img src="{{ asset('img/terremer.png') }}" alt="Restaurant Terre & Mer" style="max-height: 60px; margin-right: 25px;">
+				<img src="{{ asset('img/greatweddings.jpeg') }}" alt="Great Weddings in France" style="max-height: 60px; margin-right: 25px;">
+				<img src="{{ asset('img/bistrochamps.png') }}" alt="Le Bistro des Champs" style="max-height: 60px; margin-right: 25px;">
+				<img src="{{ asset('img/lamarlotte.png') }}" alt="La Marlotte" style="max-height: 60px; margin-right: 25px;">
+			</div>
+
+			<div class="elfsight-app-ec309407-5635-4d34-a076-6f44bf20acc8 reviews"></div>
+
+			<hr style="background-color: #2d2d2d; margin: 25px 0;">
+
 
 			<h2 class="section-title section-title--small" style="margin-top: 20px">Quelque types d'événements </h2>
 
@@ -361,4 +385,6 @@
 		</div>
 		<!-- /.container -->
 	</section>
+
+
 {% endblock %}
