--- a/templates/pages/accordeoniste_soiree.html.twig
+++ b/templates/pages/accordeoniste_soiree.html.twig
@@ -157,7 +157,7 @@
             </div>
 
 
-            <h2 class="section-title section-title--small">Prestation sur mesure pour votre soirée</h2>
+            <h2 class="section-title section-title--small" style="margin-top: 25px;">Prestation sur mesure pour votre soirée</h2>
 
             <p>
                 Loin d'être des formules immuables, les différentes propositions affichées sur cette page sont des exemples d'animations musicales et d'orientations possibles pour votre soirée avec l'accordéon. En tant que musicien professionnel, je m'adapte à vos envies tout en vous conseillant au mieux possible ; notre but est le même, faire de votre soirée un moment d'exception !
@@ -166,6 +166,23 @@
             <p>
                 Pour démarrer une première discussion et obtenir plus de renseignements, n'hésitez pas à me contacter ; vous pouvez également consulter la page des <a href="{{ path('animations') }}">animations musicales</a> pour découvrir d'autres possibilités (notamment avec un <a href="{{ path('manouche') }}">groupe de jazz manouche</a>).
             </p>
+
+			<h2 class="section-title section-title--small">Ils m'ont fait confiance</h2>
+
+			<div class="partners">
+				<img src="{{ asset('img/vinci.png') }}" alt="Vinci" style="max-height: 100px; margin-right: 25px;">
+				<img src="{{ asset('img/audiens.png') }}" alt="Audiens" style="max-height: 60px; margin-right: 25px;">
+				<img src="{{ asset('img/lebarn.svg') }}" alt="Hôtel Le Barn" style="max-width: 100px; max-height: 60px; margin-right: 25px;">
+				<img src="{{ asset('img/terremer.png') }}" alt="Restaurant Terre & Mer" style="max-height: 60px; margin-right: 25px;">
+				<img src="{{ asset('img/greatweddings.jpeg') }}" alt="Great Weddings in France" style="max-height: 60px; margin-right: 25px;">
+				<img src="{{ asset('img/bistrochamps.png') }}" alt="Le Bistro des Champs" style="max-height: 60px; margin-right: 25px;">
+				<img src="{{ asset('img/lamarlotte.png') }}" alt="La Marlotte" style="max-height: 60px; margin-right: 25px;">
+			</div>
+
+			<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+			<div class="elfsight-app-ec309407-5635-4d34-a076-6f44bf20acc8 reviews"></div>
+
+			<hr style="background-color: #2d2d2d; margin: 25px 0;">
         </div>
     </section>
 {% endblock %}
