--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -69,6 +69,23 @@
 				Vous avez forcément déjà entendu des morceaux comme <i>Minor Swing</i> ou <i>Les Yeux Noirs</i> ; intemporels, ils sont repris encore aujourd'hui dans presque tous les concerts de <strong>jazz manouche</strong>. Mais connaissez-vous des airs moins entendus, comme <i>Anniversary Song</i> ou <i>Lulu Swing</i> ? Notre répertoire balaie le style jazz manouche, des grands standards aux morceaux plus traditionnels et moins connus ; nous faisons également quelques incursions dans le jazz plus "classique", avec par exemple des reprises de Charlie Parker (<i>Billie's Bounce</i>, <i>Donna Lee</i>) ou Duke Ellington (<i>It don't mean a thing</i>, <i>Caravan</i>).
 			</p>
 
+			<h2 class="section-title section-title--small">Ils nous ont fait confiance</h2>
+
+			<div class="partners">
+				<img src="{{ asset('img/vinci.png') }}" alt="Vinci" style="max-height: 100px; margin-right: 25px;">
+				<img src="{{ asset('img/audiens.png') }}" alt="Audiens" style="max-height: 60px; margin-right: 25px;">
+				<img src="{{ asset('img/lebarn.svg') }}" alt="Hôtel Le Barn" style="max-width: 100px; max-height: 60px; margin-right: 25px;">
+				<img src="{{ asset('img/terremer.png') }}" alt="Restaurant Terre & Mer" style="max-height: 60px; margin-right: 25px;">
+				<img src="{{ asset('img/greatweddings.jpeg') }}" alt="Great Weddings in France" style="max-height: 60px; margin-right: 25px;">
+				<img src="{{ asset('img/bistrochamps.png') }}" alt="Le Bistro des Champs" style="max-height: 60px; margin-right: 25px;">
+				<img src="{{ asset('img/lamarlotte.png') }}" alt="La Marlotte" style="max-height: 60px; margin-right: 25px;">
+			</div>
+
+			<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+			<div class="elfsight-app-ec309407-5635-4d34-a076-6f44bf20acc8 reviews"></div>
+
+			<hr style="background-color: #2d2d2d; margin: 25px 0;">
+
 			<span id="formules"></span>
 
 			<h2 class="section-title section-title--small">Nos groupes de jazz manouche pour vos événements</h2>
