--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -117,20 +117,12 @@
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8eY4FsHf7g0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
-
-					<p class="text-center" style="margin-top: 15px;">
-						<a href="https://www.youtube.com/watch?v=mv3DgoYPCds" target="_blank">https://www.youtube.com/watch?v=mv3DgoYPCds</a>
-					</p>
 				</div>
 
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VVWMhc7LNcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mv3DgoYPCds" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
-
-					<p class="text-center" style="margin-top: 15px;">
-						<a href="https://www.youtube.com/watch?v=VVWMhc7LNcM" target="_blank">https://www.youtube.com/watch?v=VVWMhc7LNcM</a>
-					</p>
 				</div>
 			</div>
 
