--- a/templates/pages/accordeoniste_soiree.html.twig
+++ b/templates/pages/accordeoniste_soiree.html.twig
@@ -31,6 +31,10 @@
                 Avec une formule en solo, l'organisation de votre événement est grandement simplifiée ; les conditions techniques sont réduites au minimum, et il n'y a pas besoin de sonorisation la plupart du temps. Si cela s'avère nécessaire, je suis autonome et possède mon propre matériel de diffusion. L'espace nécessaire se résume à une chaise, qui peut se déplacer au cours de la soirée afin d'animer différents espaces..
             </p>
 
+			<p>
+				Si vous souhaitez une formule plus complète, je vous propose de voir notre <a href="{{ path('manouche') }}">groupe de jazz manouche</a> (du duo au quartet).
+			</p>
+
             <p>
                 <a href="{{ path('contact') }}" class="btn btn-primary">Une question ? Un devis ? Contactez-moi !</a>
             </p>
@@ -77,7 +81,7 @@
             <div class="row justify-content-center" style="margin-bottom: 20px;">
                 <div class="col-sm-6">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VVWMhc7LNcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2ikPP4jTAfE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
