--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -25,8 +25,30 @@
 				<small>Orchestre sur mesure, musique de qualité</small>
 			</h1>
 
-			<div class="embed-responsive embed-responsive-16by9" style="margin-bottom: 15px;">
-				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NIvIUJcluU0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<div class="row">
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/BGGrRG-q4VU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CWUY-repj8g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/u8re-Ba8RQ0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9" style="margin-bottom: 15px;">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NIvIUJcluU0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
 			</div>
 
             <p>
@@ -34,7 +56,7 @@
 			</p>
 
 			<p>
-				Vous trouverez ci-dessous des informations sur nos prestations en tant que groupe de jazz manouche. Pour tout renseignement complémentaire, ou pour établir un devis, n'hésitez pas à nous contacter (coordonnées en bas de page, ou formulaire sur page contact).
+				Vous trouverez ci-dessous des informations sur nos prestations en tant qu'orchestre jazz manouche. Pour tout renseignement complémentaire, ou pour établir un devis, n'hésitez pas à nous contacter (coordonnées en bas de page, ou formulaire sur page contact).
 			</p>
 
 			<p>
@@ -90,7 +112,7 @@
 
 			<h2 class="section-title section-title--small">Nos groupes de jazz manouche pour vos événements</h2>
 
-            <h3 class="section-title section-title--smaller">Duo jazz manouche (accordéon / guitare)</h3>
+            <h3 class="section-title section-title--smaller">Duo jazz manouche (accordéon / guitare) - Jérémy Dutheil & Solal Poux</h3>
 
 			<p>
 				Le duo jazz manouche est la formule intimiste par excellence ! L'accordéon et la guitare étant tous deux des instruments rythmiques et solistes, vous avez ici l'essence du jazz manouche sans aucun superflu. Les rôles s'alternent au sein des morceaux, et les solos s'enchaînent avec une grande dynamique.
@@ -100,26 +122,48 @@
 				Acoustique ou sonorisé, les conditions techniques sont réduites au minimum ; plus facile à accueillir qu'un <strong>orchestre jazz manouche</strong>, notre duo trouvera très facilement sa place dans les plus petits lieux. L'ambiance musicale de votre soirée n'en restera pas moins très classe et élégante, alternant les balades langoureuses et les morceaux virtuoses.
 			</p>
 
-            <div class="row">
-				<div class="col-md-6">
+			<p>
+				Habitués à jouer ensemble, nous proposons avec Solal Poux un répertoire très vaste, qui emprunte notamment à la chanson française et au jazz plus "traditionnel". Nous nous produisons aussi bien lors d'événements privés (cocktails, mariages, ..) que publics (festivals, salles, ..).
+			</p>
+
+			<div class="row">
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/BGGrRG-q4VU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CWUY-repj8g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/u8re-Ba8RQ0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 
-					<p class="text-center" style="margin-top: 15px;">
-						Ici avec notre propre arrangement de <i>La Foule</i>, célèbre morceau d'<strong>Edith Piaf</strong> ; nous avons choisi de l'interpréter dans une version douce et intimiste, pour un moment relaxant..
-						<br><a href="https://www.youtube.com/watch?v=W_uOwoGcBuE" target="_blank">https://www.youtube.com/watch?v=W_uOwoGcBuE</a>
-					</p>
 				</div>
 
-				<div class="col-md-6">
+				<div class="col-md-6" style="margin-bottom: 15px;">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Iklby0R-WyQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 
-					<p class="text-center" style="margin-top: 15px;">
-						Un grand classique parmi les standards jazz : <i>Sunny Side of the Street</i> !
-					</p>
+
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9b6zyj1e2cE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 				</div>
 			</div>
 
