--- a/templates/pages/videos.html.twig
+++ b/templates/pages/videos.html.twig
@@ -32,39 +32,44 @@
 			</p>
 
 
-
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/BGGrRG-q4VU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CWUY-repj8g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/u8re-Ba8RQ0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 
-					<p class="text-center" style="margin-top: 15px;">
-						Ici avec notre propre arrangement de <i>La Foule</i>, célèbre morceau d'<strong>Edith Piaf</strong> ; nous avons choisi de l'interpréter dans une version douce et intimiste, pour un moment relaxant..
-						<br><a href="https://www.youtube.com/watch?v=W_uOwoGcBuE" target="_blank">https://www.youtube.com/watch?v=W_uOwoGcBuE</a>
-					</p>
 				</div>
 
-				<div class="col-md-4">
+				<div class="col-md-6" style="margin-bottom: 15px;">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Iklby0R-WyQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 
-					<p class="text-center" style="margin-top: 15px;">
-						<i>Sunny Side of the Street</i> est aujourd'hui l'un des grands standards du répertoire jazz ; le morceau a initialement été composé pour le spectacle <i>International Revue</i>, musique de Jimmy McHugh avec des paroles de Dorothy Fields
-						<br><a href="https://youtu.be/Iklby0R-WyQ" target="_blank">https://youtu.be/Iklby0R-WyQ</a>
-					</p>
+
 				</div>
 
-				<div class="col-md-4">
+				<div class="col-md-6" style="margin-bottom: 15px;">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9b6zyj1e2cE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
-
-					<p class="text-center" style="margin-top: 15px;">
-						<i>Indifférence</i>, un grand classique de la valse swing ! Composé par Tony Murena et Joseph Colombo
-						<br><a href="https://www.youtube.com/watch?v=9b6zyj1e2cE" target="_blank">https://www.youtube.com/watch?v=9b6zyj1e2cE</a>
-					</p>
 				</div>
 			</div>
 
@@ -129,16 +134,7 @@
             </div>
 
             <div class="row">
-				<div class="col-md-6">
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VVWMhc7LNcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					</div>
-
-					<p class="text-center" style="margin-top: 15px;">
-						<i>Grain de Fantaisie</i> est une très jolie valse, composée par <strong>Jérôme Richard</strong> (primés plusieurs fois dans les concours internationaux) et <strong>Maurice Larcange</strong>.
-						<br><a href="https://www.youtube.com/watch?v=VVWMhc7LNcM" target="_blank">https://www.youtube.com/watch?v=VVWMhc7LNcM</a>
-					</p>
-				</div>
+				
 
                 <div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
