--- a/templates/contact/form.html.twig
+++ b/templates/contact/form.html.twig
@@ -15,3 +15,7 @@
         Votre message a bien été envoyé, merci ! Je reviendrai vers vous dès que possible.
     </p>
 {% endif %}
+
+<style type="text/css">
+    #contact .form-group:first-child { display: none; }
+</style>
