--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -257,13 +257,13 @@
             }
 
             $(document).ready(function() {
-                $('html').mouseleave(function() {
+                /*$('html').mouseleave(function() {
                     checkCookie();
                 });
 
                 $('.exit-popup-close').click(function() {
                     $('.exit-popup-container').hide();
-                });
+                });*/
             });
 
             $('.exit-popup form').submit(function(e) {
