--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -11,12 +11,11 @@
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
-			<img src="img/trio-jazz-manouche.jpg" alt="Trio jazz manouche pour événements - Accordéon, Guitare, Contrebasse" class="flash-item__background" style="top: -50%;">
-
+			<img src="img/manouchebg.jpg" alt="Un groupe de jazz manouche pour vos événements - Avec accordéon" class="flash-item__background" style="top: -50%;">
 		</div>
 	</section>
 
-	<section class="flash-ghost flash-ghost--limited flash-ghost--superlimited"></section>
+	<section class="flash-ghost flash-ghost--limited"></section>
 
 	<section class="content-section bg--blank page-section">
 		<div class="container bg--blank">
@@ -24,6 +23,10 @@
 				Groupe jazz manouche pour vos événements <br>
 				<small>Orchestre sur mesure, musique de qualité</small>
 			</h1>
+
+			<p>
+                Vous recherchez un <strong>groupe de jazz manouche</strong> pour <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">votre mariage</a>, anniversaire, cocktail d'entreprise ou tout autre événement ? Vous avez fait le tour des sites qui proposent une <strong>recherche de musiciens</strong> et ne savez pas qui choisir ? Vous êtes au bon endroit ! <strong>Musiciens professionnels</strong> et expérimentés, nous vous proposons différentes formules (duo, trio, quartet, ...), toutes sur mesure, pour une animation musicale de qualité lors de votre événement.
+			</p>
 
 			<div class="row">
 				<div class="col-md-6" style="margin-bottom: 15px;">
@@ -51,12 +54,8 @@
 				</div>
 			</div>
 
-            <p>
-                Vous recherchez un <strong>groupe de jazz manouche</strong> pour <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">votre mariage</a>, anniversaire, cocktail d'entreprise ou tout autre événement ? Vous avez fait le tour des sites qui proposent une <strong>recherche de musiciens</strong> et ne savez pas qui choisir ? Vous êtes au bon endroit ! <strong>Musiciens professionnels</strong> et expérimentés, nous vous proposons différentes formules, toutes sur mesure, pour une animation musicale de qualité lors de votre événement.
-			</p>
-
 			<p>
-				Vous trouverez ci-dessous des informations sur nos prestations en tant qu'orchestre jazz manouche. Pour tout renseignement complémentaire, ou pour établir un devis, n'hésitez pas à nous contacter (coordonnées en bas de page, ou formulaire sur page contact).
+				Vous trouverez ci-dessous des informations sur nos prestations en tant qu'orchestre jazz manouche. Pour tout renseignement complémentaire, ou pour établir un devis, n'hésitez pas à <a href="{{ path('contact') }}">nous contacter</a>.
 			</p>
 
 			<p>
@@ -316,6 +315,10 @@
                     <i>Et bien d'autres...</i>
                 </li>
             </ul>
+
+			<h2 class="section-title section-title--small">Plus d'informations ? Un devis gratuit ?</h2>
+
+			<a href="{{ path('contact') }}" class="btn btn-primary">Contactez-nous !</a>
         </div>
 
 
